fix(overall app): resolve button, inputs and mat-panel broken css issue

--- a/src/app/component/team-selector/team-selector.component.css
+++ b/src/app/component/team-selector/team-selector.component.css
@@ -36,8 +36,8 @@
     white-space: nowrap;
 }
 
-.checkbox-grid {
+:host ::ng-deep .checkbox-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 8px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 10px)) !important;
+    gap: 2px !important;
 }
